--- a/client/src/pages/pages.css
+++ b/client/src/pages/pages.css
@@ -1,5 +1,5 @@
-.loginbody{
-  width: 100%;  
+.loginbody {
+  width: 100%;
   min-height: 100vh;
   background-color: white;
   display: flex;
@@ -14,84 +14,91 @@
   background-color: rgba(255, 255, 255, 1);
   color: #000;
   border-radius: 9px;
-  box-shadow: -21px -39px 255px -115px rgba(0,0,0,0.45),
-25px 0px 20px -20px rgba(0,0,0,0.45),
-0px 25px 20px -20px rgba(0,0,0,0.45),
--25px 0px 20px -20px rgba(0,0,0,0.45);
-display: flex;
-align-items: center;
-flex-direction: column;
-justify-content: space-evenly;
+  box-shadow: -21px -39px 255px -115px rgba(0, 0, 0, 0.45),
+    25px 0px 20px -20px rgba(0, 0, 0, 0.45),
+    0px 25px 20px -20px rgba(0, 0, 0, 0.45),
+    -25px 0px 20px -20px rgba(0, 0, 0, 0.45);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
 }
 
-.logo{
-
+.logo {
   font-size: 40px;
   font-style: italic;
-  font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
   cursor: pointer;
   color: black;
   text-decoration: none;
+  display: flex;
 }
 
-.logo:hover{
+.logo:hover {
   text-decoration: none;
 }
-form{
+form {
   display: flex;
   flex-direction: column;
   width: 100%;
   align-items: center;
 }
 
-.forgot{
+.forgot {
   color: rgb(18, 146, 226);
   cursor: pointer;
   font-weight: 600;
 }
-.forgot:hover{
+.forgot:hover {
   color: darkblue;
 }
-.inp{
+.inp {
   width: 80%;
   height: 40px;
-  margin-top: 10px ;
+  margin-top: 10px;
   border-radius: 5px;
-  border: 0.5px solid ;
+  border: 0.5px solid;
   font-size: 100%;
   font-weight: 600;
-
 }
-#sub{
+#sub {
   background-color: rgb(4, 152, 245);
- 
 }
-#sub:hover{
-  box-shadow:  5px 5px 8px 0px #e0e0e0;
+#sub:hover {
+  box-shadow: 5px 5px 8px 0px #e0e0e0;
 }
-#dont{
+#dont {
   font-weight: 600;
 }
 
-#passwd{
+#passwd {
   position: relative;
 }
-.pass{
+.pass {
   width: 100%;
   display: flex;
   justify-content: center;
 }
 
-.sh{
+.sh {
   position: absolute;
   right: 45px;
-  top:18px;
+  top: 18px;
   font-weight: 900;
   cursor: pointer;
 }
-
-.signbody{
-  width: 100%;  
+.logo-img {
+  width: 50px;
+  height: 50px;
+  background-color: #000;
+  margin-right: 20px;
+  border-radius: 100%;
+}
+.logo-name:hover {
+  animation: colorchange 3s linear infinite;
+}
+.signbody {
+  width: 100%;
   min-height: 100vh;
   background-color: white;
   display: flex;
@@ -99,18 +106,41 @@ form{
   justify-content: center;
   align-items: center;
 }
-.signbox{
+.signbox {
   width: 400px;
-  height: 600px; 
-   background-color: rgba(255, 255, 255, 1);
+  height: 600px;
+  background-color: rgba(255, 255, 255, 1);
   color: #000;
   border-radius: 9px;
-  box-shadow: -21px -39px 255px -115px rgba(0,0,0,0.45),
-25px 0px 20px -20px rgba(0,0,0,0.45),
-0px 25px 20px -20px rgba(0,0,0,0.45),
--25px 0px 20px -20px rgba(0,0,0,0.45);
-display: flex;
-align-items: center;
-flex-direction: column;
-justify-content: space-evenly;
+  box-shadow: -21px -39px 255px -115px rgba(0, 0, 0, 0.45),
+    25px 0px 20px -20px rgba(0, 0, 0, 0.45),
+    0px 25px 20px -20px rgba(0, 0, 0, 0.45),
+    -25px 0px 20px -20px rgba(0, 0, 0, 0.45);
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: space-evenly;
+}
+.a {
+  text-decoration: none;
+  margin-left: 2px;
+  color: rgb(4, 152, 245);
+  font-weight: 700;
+}
+@keyframes colorchange {
+  0% {
+    color: red;
+  }
+  25% {
+    color: blue;
+  }
+  50% {
+    color: yellow;
+  }
+  75% {
+    color: green;
+  }
+  100% {
+    color: pink;
+  }
 }
