--- a/client/src/styles/global.css
+++ b/client/src/styles/global.css
@@ -227,7 +227,9 @@ form{
   height: 40px;
   margin-top: 10px ;
   border-radius: 5px;
-  border: 0.5px solid ;
+  border: 0;
+  outline: 1px solid;
+  padding-left: 5px;
   font-size: 100%;
   font-weight: 600;
 
